More site updates

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title>GRAX: </title>
+<title>{{ page.title }}</title>
+<link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
 </head>
 <body>
-GRAX<br/>
+{{ page.title }}<br/>
 <hr />
 
 {{content}}
