--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -162,6 +162,7 @@ pre, code {
   width: 100%;
   color: #222;
   background-color: #fff;
+  box-sizing: border-box;
 
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 14px;
