--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -94,6 +94,16 @@ h6 {
   font-size: 16px;
 }
 
+sup {
+  vertical-align: super;
+  font-size: .6em;
+}
+
+sub {
+  vertical-align: sub;
+  font-size: .6em;
+}
+
 p {
   margin: 10px 0 15px 0;
 }
