--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
 </head>
 <body>
-{{ page.title }}<br/>
+<h1>{{ page.title }}</h1>
 <hr />
 
 {{content}}
