--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,6 +57,7 @@ body {
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  padding: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
