--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,10 @@
     <![endif]-->
   </head>
   <body>
+      <div class="jumbotron">{{ page.title }}</div>
+      <div>
     {{content}}
+    </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </body>
 </html>
