--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-      <div class="jumbotron">{{ page.title }}</div>
+      <div class="jumbotron"><h1>{{ page.title }}</h1></div>
       <div>
     {{content}}
     </div>
