--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -7,6 +7,7 @@ ul{
 }
 ul > li{
   margin-bottom:15px;
+  color: white;
 }
 li span{
   display:block;
@@ -27,4 +28,11 @@ ul li a{
   display:block;
   width:100%;
   padding:15px 0;
+  color: white;
+}
+
+h1,h2,h3,h4,h5,h6{
+    width: 100%;
+    border: 1px solid black;
+    background-color: lightblue;
 }
