--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,35 +1,18 @@
-ul{
-  width:300px;
-  list-style:none;
-  padding:0;
-  text-align:center;
-  overflow:auto;
+
+ul {
+    background-color: lightyellow;
 }
-ul > li{
-  margin-bottom:15px;
-  color: white;
+
+ul ul {
+    border: 0 none;
 }
-li span{
-  display:block;
-  clear:both;
-  background:#5A9BD5;
-  padding:15px 0;
+
+ul ul li {
+    background-color: lightgray;
+    padding: 5px;
 }
-ul ul li{
-  float:left;
-  width:90px;
-  margin:15px 15px 0 0;
-}
-ul ul li:nth-child(3){
-  margin-right:0;
-}
-ul li a{
-  background:#5A9BD5;
-  display:block;
-  width:100%;
-  padding:15px 0;
-  color: white;
-}
+
+
 
 h1,h2,h3,h4,h5,h6{
     width: 100%;
