--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -3,6 +3,7 @@ ul {
     background-color: lightyellow;
     list-style-type: none;
     list-style-position: inside;
+    padding: 25px;
 }
 
 li {
@@ -12,10 +13,11 @@ li {
 ul ul {
     border: 0 none;
     background-color: red;
+    padding: 5px;
 }
 
 ul ul ul {
-    background-color: blue;
+    background-color: green;
 }
 
 ul ul li {
