--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <![endif]-->
   </head>
   <body>
-      <div class="jumbotron"><h1>{{ page.title }}</h1></div>
+      <h1>{{ page.title }}</h1><
       <div>
     {{content}}
     </div>
