--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,32 @@
 </head>
 
 <body>
-  <h1>{{ page.title }}</h1>
-  <div>
+  <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+    <div class="container">
+      <nav id="bs-navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"> <a href="../getting-started/">Continuous Improvement</a> </li>
+          <li> <a href="../css/">Life</a> </li>
+          <li> <a href="../components/">Team</a> </li>
+          <li> <a href="../javascript/">Code</a> </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="http://expo.getbootstrap.com" onclick="ga(&quot;send&quot;,&quot;event&quot;,&quot;Navbar&quot;,&quot;Community links&quot;,&quot;Expo&quot;)">Subscribe</a></li>
+          <li><a href="http://blog.getbootstrap.com" onclick="ga(&quot;send&quot;,&quot;event&quot;,&quot;Navbar&quot;,&quot;Community links&quot;,&quot;Blog&quot;)">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="bs-docs-header" id="content" tabindex="-1">
+    <div class="container">
+      <h1>{{ page.title }}</h1>
+      <p>Researching and Sharing Techniques for Continuous Improvement of your Life, your Team, and your Code.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container bs-docs-container">
     {{content}}
   </div>
   <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
