--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,14 +26,13 @@
     <div class="container">
       <nav id="bs-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"> <a href="../getting-started/">Continuous Improvement</a> </li>
-          <li> <a href="../css/">Life</a> </li>
-          <li> <a href="../components/">Team</a> </li>
-          <li> <a href="../javascript/">Code</a> </li>
+          <li class="active"> <a href="/continuous-improvement/">Continuous Improvement</a> </li>
+          <li> <a href="/continuous-improvement/life">Life</a> </li>
+          <li> <a href="/continuous-improvement/team">Team</a> </li>
+          <li> <a href="/continuous-improvement/code">Code</a> </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://expo.getbootstrap.com" onclick="ga(&quot;send&quot;,&quot;event&quot;,&quot;Navbar&quot;,&quot;Community links&quot;,&quot;Expo&quot;)">Subscribe</a></li>
-          <li><a href="http://blog.getbootstrap.com" onclick="ga(&quot;send&quot;,&quot;event&quot;,&quot;Navbar&quot;,&quot;Community links&quot;,&quot;Blog&quot;)">About</a></li>
+          <li><a href="/about" ">About</a></li>
         </ul>
       </nav>
     </div>
