--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+  <header class="navbar navbar-static-top bs-docs-nav collapse" id="top" role="banner">
     <div class="container">
       <nav id="bs-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
