--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -53,7 +53,7 @@
             <a href="/improve/your/code">Improve Your Code</a><br/>
             <a href="/here/is/my/opinion">Opinion</a><br/>
             <a href="/software/projects">Software Projects</a><br/>
-            <a href="http://foo.network/">Foo Network</a><br/>
+            <a href="http://foonetwork.space/">Foo Network</a><br/>
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
