--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -44,7 +44,7 @@
             <a href="/improve/your/code">Improve Your Code</a><br/>
             <a href="/here/is/my/opinion">Opinion</a><br/>
             <a href="/software/projects">Software Projects</a><br/>
-            <a href="http://foo.network/">Foo Network</a><br/>
+            <a href="http://foonetwork.space/">Foo Network</a><br/>
             <hr />
             {{ site.page_sections | where:"category", page.category | map: "output" | first }}
         </section>
