--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -132,6 +132,8 @@ a:hover, a:focus {text-decoration: underline;}
 footer a {
   color: #F2F2F2;
   text-decoration: underline;
+  color: red;
+  font-size: 2em;
 }
 
 em {
