--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -130,10 +130,8 @@ a {
 a:hover, a:focus {text-decoration: underline;}
 
 footer a {
-  color: #F2F2F2;
-  text-decoration: underline;
-  color: red;
-  font-size: 2em;
+  color: black;
+  text-decoration: none;
 }
 
 em {
