Updates to home page and other details

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 {% assign author = page.author | default: "dwalker" %}
 <head>
     <title>{{ page.title }}</title>
@@ -44,16 +44,11 @@
             <a href="/improve/your/code">Improve Your Code</a><br/>
             <a href="/here/is/my/opinion">Opinion</a><br/>
             <a href="/software/projects">Software Projects</a><br/>
-            <a href="http://foonetwork.space/">Foo Network</a><br/>
             <hr />
             {{ site.page_sections | where:"category", page.category | map: "output" | first }}
         </section>
     </div>
-    <div class="row">
-        <footer class="col-md-10 grax-author-pane">
-             {{ site.authors | where:"name", author | map: "output" | first }}
-        </footer>
-    </div>
+
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
