--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -3,27 +3,27 @@ header {
     color: white;
 }
 
-header a {
-    color: white;
-}
+    header a {
+        color: white;
+    }
 
 .bs-docs-header {
     background-color: #222233;
     color: white;
 }
 
-.bs-docs-header h1{
-    border-top-width: 0;
-}
+    .bs-docs-header h1 {
+        border-top-width: 0;
+    }
 
-.bs-docs-header p {
-    font-style: italic;
-    padding-left: 25px;    
-}
+    .bs-docs-header p {
+        font-style: italic;
+        padding-left: 25px;
+    }
 
 a {
     font-weight: bold;
-    color: #9C2123;   
+    color: #9C2123;
 }
 
 h3 a {
@@ -45,32 +45,32 @@ ul ul {
     padding: 0;
 }
 
-ul ul li {
-    font-style: italic;
-    padding: 4px;
-    padding-top: 0px;
-    margin-top: 1px;
-    font-weight: normal;
-}
+    ul ul li {
+        font-style: italic;
+        padding: 4px;
+        padding-top: 0px;
+        margin-top: 1px;
+        font-weight: normal;
+    }
 
-ul ul ul {
-    border: 0 none;
-}
+    ul ul ul {
+        border: 0 none;
+    }
 
-ul ul ul li {
-    font-style:  italic;
-    display: inline;
-    border: 0 none;
-    background-color: #FFFFEE;
-    padding: 4px;
-}
+        ul ul ul li {
+            font-style: italic;
+            display: inline;
+            border: 0 none;
+            background-color: #FFFFEE;
+            padding: 4px;
+        }
 
-ul ul ul li:before {
-    content: "\2022\00a0";
-    font-size: 1.5em;
-}
+            ul ul ul li:before {
+                content: "\2022\00a0";
+                font-size: 1.5em;
+            }
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
     border: 0 solid black;
     border-top-width: 2px;
     border-bottom-width: 4px;
@@ -85,9 +85,9 @@ h1 {
     padding: 15px;
 }
 
-h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{
-    color: oldlace;
-}
+    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+        color: oldlace;
+    }
 
 .bs-docs-nav {
     margin-bottom: 1px;
@@ -100,10 +100,36 @@ h3 {
 img {
     border: 2px solid white;
     border-radius: 25px;
-	max-width: 100%;
+    max-width: 100%;
 }
 
-img.plain {
-    border: 0 none;
-    border-radius: 0%;
+    img.plain {
+        border: 0 none;
+        border-radius: 0%;
+    }
+
+.project-table th {
+    white-space: nowrap;
 }
+
+.project-table td {
+    border: 1px solid lightgray;
+    margin: 0;
+    padding: 3px;
+}
+
+.cia-tagline {
+    font-weight: bold;
+}
+
+    .cia-tagline .fa-lock {
+        color: rgb(178,23,23);
+    }
+
+    .cia-tagline .fa-edit {
+        color: rgb(23,47,128);
+    }
+
+    .cia-tagline .fa-arrow-up {
+        color: rgb(30,181,47);
+    }
