--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -98,6 +98,7 @@
             font-weight: bold;
             font-size: 1.4em;
             border-bottom: 2px solid black;
+            margin-bottom: 4px;
         }
 
             .cia-tagline .fa-lock {
