--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -103,6 +103,7 @@
             font-size: 1.4em;
             border-bottom: 2px solid black;
             margin-bottom: 4px;
+            display: none;
         }
 
             .cia-tagline .fa-lock {
