--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -26,6 +26,7 @@
                 background-size: cover;
                 filter: blur(8px);
                 z-index: -1;
+                margin-bottom: 15px;
             }
 
         a {
@@ -61,8 +62,8 @@
             }
 
         h2, h3, h4, h5, h6 {
-            background-color: lightgray;
-            border: 0 solid black;
+            background-color: white;
+            border: 0 solid lightgray;
             border-top-width: 2px;
             border-bottom-width: 4px;
             padding-left: 8px;
