--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -13,6 +13,7 @@
             padding-left: 8px;
             font-weight: bold;
             color: white;
+            margin-bottom: 15px;
         }
 
             .bs-docs-header.header-background {
@@ -26,7 +27,6 @@
                 background-size: cover;
                 filter: blur(8px);
                 z-index: -1;
-                margin-bottom: 15px;
             }
 
         a {
@@ -62,7 +62,7 @@
             }
 
         h2, h3, h4, h5, h6 {
-            background-color: white;
+            background-color: #EEEEEE;
             border: 0 solid lightgray;
             border-top-width: 2px;
             border-bottom-width: 4px;
