--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -68,6 +68,7 @@
             border-bottom-width: 4px;
             padding-left: 8px;
             padding-top: 13px;
+            opacity: 0.4;
         }
 
         h1 {
