update bg color

--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -62,13 +62,12 @@
             }
 
         h2, h3, h4, h5, h6 {
-            background-color: #EEEEEE;
+            background-color: rgba(245,245,245,.4);
             border: 0 solid lightgray;
             border-top-width: 2px;
             border-bottom-width: 4px;
             padding-left: 8px;
             padding-top: 13px;
-            opacity: 0.4;
         }
 
         h1 {
