--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -126,12 +126,14 @@
     <div class="bs-docs-header header-background" tabindex="-1">
         <div class="container">
             <h1>{{ page.title }}</h1>
+            <h3>Secure Software, Strong Teams</h3>
         </div>
     </div>
 
     <div class="bs-docs-header header-text">
         <div class="container">
             <h1>{{ page.title }}</h1>
+            <h3>Secure Software, Strong Teams</h3>
         </div>
     </div>
 
