--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -16,6 +16,12 @@
             margin-bottom: 25px;
         }
 
+            .bs-docs-header h3 {
+                border: 0;
+                margin: 0;
+                padding: 2px;
+            }
+
             .bs-docs-header.header-background {
                 position: absolute;
                 top: 0;
@@ -32,10 +38,6 @@
         a {
             font-weight: bold;
             color: #9C2123;
-        }
-
-        h3 a {
-            font-weight: normal;
         }
 
         ul {
@@ -78,10 +80,6 @@
             h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
                 color: black;
             }
-
-        h3 {
-            padding: 10px;
-        }
 
         img {
             border: 2px solid white;
