--- a/_layouts/home-page-2019.html
+++ b/_layouts/home-page-2019.html
@@ -2,92 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="jekyll-build-time" content="{{ site.time }}" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/2019.css">
     <style type="text/css">
-        .page-header {
-            width: 100vw;
-            max-width: 1440px;
-            margin: 0;
-            padding: 0;
-            border: 0 none;
-            position: relative;
-        }
-
-        .page-header-main {
-            width: 100%;
-            min-height: 120px;
-        }
-
-        .page-header-author-image {
-            position: absolute;
-            border-radius: 10px;
-            border: 2px rgba(255,255,255,.6) solid;
-            left: 10px;
-            bottom: 10px;
-            width: 200px;
-            background-color: rgba(0,0,0,.4);
-            transition: width 1s;
-        }
-
-        .page-header-text {
-            position: absolute;
-            left: 220px;
-            bottom: 10px;
-            background-color: rgba(0,0,0,.1);
-            color: white;
-            padding: 5px;
-            border-radius: 10px;
-            border: 0 none;
-            transition: left 1s;
-        }
-
-        
-        @media(max-width: 1170px) {
-            .page-header-text {
-                left: 220px;
-            }
-
-            .page-header-author-image {
-                width: 200px;
-            }
-        }
-
-        @media(min-width: 700px) and (max-width: 1169px) {
-            .page-header-text {
-                left: 130px;
-            }
-
-            .page-header-author-image {
-                width: 120px;
-            }
-        }
-
-        @media(max-width: 699px) {
-            .page-header-text {
-                left: 90px;
-            }
-
-            .page-header-author-image {
-                width: 80px;
-            }
-        }
-
-        .page-header-text h1 {
-            -webkit-text-stroke: black 1px;
-            text-stroke: black 1px;
-            font-size: 20px;
-            font-weight: bold;
-        }
-
-        .page-header-text h3 {
-            font-size: 14px;
-        }
-
         .project-table th {
             white-space: nowrap;
         }
@@ -123,11 +44,11 @@
 
 <body>
     <div class="page-header">
-        <img class="page-header-main" src="/images/lizardleaf.jpg" alt="Photo by David Walker" />
+        <img class="page-header-main-image" src="/images/lizardleaf.jpg" alt="Photo by David Walker" />
         <img class="page-header-author-image" src="/images/david-walker.png" alt="David Walker" />
         <div class="page-header-text">
             <h1>David Walker</h1>
-            <h3>Secure&nbsp;Software &bull; Strong&nbsp;Teams &bull; DotNet&nbsp;Core &bull; ASP.NET</h3>
+            <h3>Secure&nbsp;Software &bull;&nbsp;Strong&nbsp;Teams &bull;&nbsp;DotNet&nbsp;Core &bull;&nbsp;ASP.NET &bull;&nbsp;SQL Server</h3>
         </div>
     </div>
 
