--- a/_layouts/pages-bak.html
+++ b/_layouts/pages-bak.html
@@ -3,35 +3,33 @@
 <head>
     <title>{{ page.title }}</title>
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="jekyll-build-time" content="{{ site.time }}" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:description" content="Secure Software, Strong Teams" />
-    <meta property="og:image" content="{{ site.url }}{{ page.ogImage | default: " /images/dwalker.jpg " }}" />
+    <meta property="og:description" content="Continuously Improve Yourself, Your Team, and Your Code" />
+    <meta property="og:image" content="{{ site.url }}{{ page.ogImage | default: " /images/grax-logo.jpg " }}" />
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-          crossorigin="anonymous">
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
-          integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+        integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
-    <link rel="stylesheet" href="/stylesheets/2019.css">
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <title>{{ page.title }}</title>
 </head>
 
 <body class="container">
-    <div class="page-header">
-        <img class="page-header-main-image" src="/images/lizardleaf.jpg" alt="Photo by David Walker" />
-        <img class="page-header-author-image" src="/images/david-walker.png" alt="David Walker" />
-        <div class="page-header-text">
-            <h1>David Walker</h1>
-            <h3>Secure&nbsp;Software &bull;&nbsp;Strong&nbsp;Teams &bull;&nbsp;DotNet&nbsp;Core &bull;&nbsp;ASP.NET &bull;&nbsp;SQL Server</h3>
-        </div>
-    </div>
     <header class="row">
         <h1 class="col-md-10">{{ page.title }}</h1>
     </header>
@@ -40,12 +38,12 @@
             {{content}}
         </section>
         <section class="col-md-2 grax-navigation-pane">
-            <a href="/">Home</a><br />
-            <a href="/improve/your/life">Improve Your Life</a><br />
-            <a href="/improve/your/team">Improve Your Team</a><br />
-            <a href="/improve/your/code">Improve Your Code</a><br />
-            <a href="/here/is/my/opinion">Opinion</a><br />
-            <a href="/software/projects">Software Projects</a><br />
+            <a href="/">Home</a><br/>
+            <a href="/improve/your/life">Improve Your Life</a><br/>
+            <a href="/improve/your/team">Improve Your Team</a><br/>
+            <a href="/improve/your/code">Improve Your Code</a><br/>
+            <a href="/here/is/my/opinion">Opinion</a><br/>
+            <a href="/software/projects">Software Projects</a><br/>
             <hr />
             {{ site.page_sections | where:"category", page.category | map: "output" | first }}
         </section>
@@ -53,8 +51,8 @@
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-            crossorigin="anonymous"></script>
-    {% include google-analytics.html %}
+        crossorigin="anonymous"></script>
+        {% include google-analytics.html %}
 </body>
 
 </html>
